--- a/usage.html
+++ b/usage.html
@@ -195,7 +195,7 @@ on the closest pairs found and selections are not required; use counts to act in
 <tr><td><code>(</code>, <code>[</code>, <code>'</code>, etc</td><td>Specified surround pairs</td></tr>
 <tr><td><code>f</code></td><td>Function</td></tr>
 <tr><td><code>c</code></td><td>Class</td></tr>
-<tr><td><code>p</code></td><td>Parameter</td></tr>
+<tr><td><code>a</code></td><td>Argument/parameter</td></tr>
 <tr><td><code>o</code></td><td>Comment</td></tr>
 </tbody></table>
 <blockquote>
