--- a/master/print.html
+++ b/master/print.html
@@ -690,6 +690,7 @@ specific indent settings, etc see the default
 <tr><td>nix</td><td>✓</td><td></td><td>✓</td><td><code>rnix-lsp</code></td></tr>
 <tr><td>ocaml</td><td>✓</td><td></td><td>✓</td><td></td></tr>
 <tr><td>ocaml-interface</td><td>✓</td><td></td><td></td><td></td></tr>
+<tr><td>org</td><td>✓</td><td></td><td></td><td></td></tr>
 <tr><td>perl</td><td>✓</td><td>✓</td><td>✓</td><td></td></tr>
 <tr><td>php</td><td>✓</td><td>✓</td><td>✓</td><td></td></tr>
 <tr><td>prolog</td><td></td><td></td><td></td><td><code>swipl</code></td></tr>
