deploy: 3c79bf51170caf09642da3cc23ba389ed57a79ac

--- a/master/print.html
+++ b/master/print.html
@@ -702,6 +702,7 @@ specific indent settings, etc see the default
 <tr><td>ruby</td><td>✓</td><td></td><td>✓</td><td><code>solargraph</code></td></tr>
 <tr><td>rust</td><td>✓</td><td>✓</td><td>✓</td><td><code>rust-analyzer</code></td></tr>
 <tr><td>scala</td><td>✓</td><td></td><td>✓</td><td><code>metals</code></td></tr>
+<tr><td>solidity</td><td></td><td></td><td></td><td><code>solc</code></td></tr>
 <tr><td>svelte</td><td>✓</td><td></td><td>✓</td><td><code>svelteserver</code></td></tr>
 <tr><td>tablegen</td><td>✓</td><td>✓</td><td>✓</td><td></td></tr>
 <tr><td>toml</td><td>✓</td><td></td><td></td><td></td></tr>
