deploy: bee05dd32a685b58015514492525673b1b568b0d

--- a/master/configuration.html
+++ b/master/configuration.html
@@ -144,7 +144,7 @@
 <li>Windows: <code>%AppData%\helix\config.toml</code></li>
 </ul>
 <blockquote>
-<p>Note: You may use <code>hx --edit-config</code> to create and edit the <code>config.toml</code> file.</p>
+<p>Hint: You can easily open the config file by typing <code>:config-open</code> within Helix normal mode.</p>
 </blockquote>
 <p>Example config:</p>
 <pre><code class="language-toml">theme = &quot;onedark&quot;
