deploy: 5d61631507143194594f1dff6af9f862ce79992e

--- a/master/print.html
+++ b/master/print.html
@@ -548,10 +548,10 @@ you to selectively add search terms to your selections.</p>
 <h1 id="picker"><a class="header" href="#picker">Picker</a></h1>
 <p>Keys to use within picker. Remapping currently not supported.</p>
 <table><thead><tr><th>Key</th><th>Description</th></tr></thead><tbody>
-<tr><td><code>Up</code>, <code>Ctrl-k</code>, <code>Ctrl-p</code></td><td>Previous entry</td></tr>
-<tr><td><code>PageUp</code>, <code>Ctrl-b</code></td><td>Page up</td></tr>
-<tr><td><code>Down</code>, <code>Ctrl-j</code>, <code>Ctrl-n</code></td><td>Next entry</td></tr>
-<tr><td><code>PageDown</code>, <code>Ctrl-f</code></td><td>Page down</td></tr>
+<tr><td><code>Up</code>, <code>Ctrl-p</code></td><td>Previous entry</td></tr>
+<tr><td><code>PageUp</code>, <code>Ctrl-u</code></td><td>Page up</td></tr>
+<tr><td><code>Down</code>, <code>Ctrl-n</code></td><td>Next entry</td></tr>
+<tr><td><code>PageDown</code>, <code>Ctrl-d</code></td><td>Page down</td></tr>
 <tr><td><code>Home</code></td><td>Go to first entry</td></tr>
 <tr><td><code>End</code></td><td>Go to last entry</td></tr>
 <tr><td><code>Ctrl-space</code></td><td>Filter options</td></tr>
