deploy: 8e12fd52908ecc7d53d1b456fe3b10e0833f1a63

--- a/master/lang-support.html
+++ b/master/lang-support.html
@@ -189,7 +189,7 @@ specific indent settings, etc see the default
 <tr><td>ocaml-interface</td><td>✓</td><td></td><td></td><td></td></tr>
 <tr><td>org</td><td>✓</td><td></td><td></td><td></td></tr>
 <tr><td>perl</td><td>✓</td><td>✓</td><td>✓</td><td></td></tr>
-<tr><td>php</td><td>✓</td><td>✓</td><td>✓</td><td></td></tr>
+<tr><td>php</td><td>✓</td><td>✓</td><td>✓</td><td><code>intelephense</code></td></tr>
 <tr><td>prolog</td><td></td><td></td><td></td><td><code>swipl</code></td></tr>
 <tr><td>protobuf</td><td>✓</td><td></td><td>✓</td><td></td></tr>
 <tr><td>python</td><td>✓</td><td>✓</td><td>✓</td><td><code>pylsp</code></td></tr>
