deploy: 3d79c60a1ff7d2976c89b90976746df629be34fa

--- a/master/lang-support.html
+++ b/master/lang-support.html
@@ -138,10 +138,12 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="language-support"><a class="header" href="#language-support">Language Support</a></h1>
-<p>For more information like arguments passed to default LSP server,
-extensions assosciated with a filetype, custom LSP settings, filetype
-specific indent settings, etc see the default
-<a href="https://github.com/helix-editor/helix/blob/master/languages.toml"><code>languages.toml</code></a> file.</p>
+<p>The following languages and Language Servers are supported. In order to use
+Language Server features, you must first <a href="https://github.com/helix-editor/helix/wiki/How-to-install-the-default-language-servers">install</a> the
+appropriate Language Server.</p>
+<p>Check the language support in your installed helix version with <code>hx --health</code>.</p>
+<p>Also see the <a href="./languages.html">Language Configuration</a> docs and the <a href="./guides/adding_languages.html">Adding
+Languages</a> guide for more language configuration information.</p>
 <table><thead><tr><th>Language</th><th>Syntax Highlighting</th><th>Treesitter Textobjects</th><th>Auto Indent</th><th>Default LSP</th></tr></thead><tbody>
 <tr><td>bash</td><td>✓</td><td></td><td></td><td><code>bash-language-server</code></td></tr>
 <tr><td>c</td><td>✓</td><td>✓</td><td>✓</td><td><code>clangd</code></td></tr>
